syntax = "proto3";
package kratos.api;

option go_package = "github.com/goxiaoy/go-saas-kit/user/internal_/conf;conf";

import "conf/conf.proto";

message Bootstrap {
  Data data = 2;
  conf.Security security=3;
  conf.Services services =4;
  UserConf user=5;
}

message Data {
  conf.Endpoints endpoints = 1;
}

message Admin{
  string username =1;
  string password=2;
}
message UserConf{
  // Minimum password score. [0-5]
  int32 password_score_min=1;
  Admin admin =2;
}

